# BUPT-stamp-processor

./: .gitignore  ARCH_SPEC.md  CMakeLists.txt  REPORT.md  run_all.sh  trace.txt
.claude/: settings.local.json
config/: mobol_arch.yaml  ramulator_3d_dram.yaml  ramulator_mobol.yaml  ramulator_smoke.yaml
dse_bo/: analyze.py  analyze_matrix.py  bo_engine.py  bo_matrix.py  evaluate.py  gen_variant.py  insight_sweeps.py  matrix.py  random_baseline.py  topology_scaling.py  validate_variant.sh
pr/: README.md  run_all.sh
pr/config/: experiments.yaml
pr/scripts/: arch_model.py  collect_results.py  gen_runs.py  gen_sram_lib.py  plot_layout.py
pr/scripts/openroad/: area_probe.tcl  floorplan_hb.tcl  pr_main.tcl
rtl/: README.md  SYNTH_NOTES.md
rtl/buffer/: nmc_engine.sv  prefetch_engine.sv  ssp_bank.sv
rtl/common/: mobol_pkg.sv
rtl/fp/: f16_to_f32.sv  f32_to_f16.sv  fp32_add.sv  fp32_mul.sv  fp32_recip.sv  fp32_rsqrt.sv  fp_exp2.sv
rtl/mxu/: mxu16.sv
rtl/noc/: noc_pkg.sv  ring_noc.sv  ring_router.sv
rtl/sram/: sram_2r1w.sv  sram_2r1w_macro.sv
rtl/sram/cacti/: local_256kB.cfg
rtl/tile/: dma_engine.sv  join_ctr.sv  noc_tile_sys.sv  tile_node.sv  tile_top.sv
rtl/verif/: fp_test_top.sv  noc_test_top.sv  tb_fp.cpp  tb_join.cpp  tb_mxu.cpp  tb_nmc.cpp  tb_noc_tile.cpp  tb_prefetch.cpp  tb_router.cpp  tb_tile.cpp  tb_transcend.cpp  tb_vpu.cpp  transcend_test_top.sv
rtl/vpu/: vpu16.sv
src/: CMakeLists.txt  main.cpp  trace_sim.cpp
src/common/: address.cpp  address.h  f16.h  functional_engine.cpp  functional_engine.h  memory_model.cpp  memory_model.h  sync_manager.cpp  sync_manager.h  types.h
src/cycle/: arch_config.cpp  arch_config.h  blockops.h  chip.cpp  chip.h  cycle_config.h  dram_ctrl.cpp  dram_ctrl.h  fabric.cpp  fabric.h  flit.h  hbm_refresh.cpp  isa.h  tile_core.cpp  tile_core.h  trace_loader.cpp  trace_loader.h
src/timing/: timing_model.cpp  timing_model.h  trace.cpp  trace.h
src/workload/: cpu_reference.cpp  cpu_reference.h  dual_gemm.cpp  dual_gemm.h  dual_gemm_cycle.cpp  dual_gemm_cycle.h  llm_layer.cpp  llm_layer.h
synth/: README.md  run_synth.sh
synth/fakeram/: gen_sram_macros.py  mobol_sram.cfg
synth/filelists/: nmc_engine.f  noc_tile_sys.f  prefetch_engine.f  ring_noc.f  ssp_bank.f  tile_node.f  tile_top.f  vpu16.f
synth/macros/mobol_sram_4096x512_1rw/: mobol_sram_4096x512_1rw.lef  mobol_sram_4096x512_1rw.v
synth/macros/mobol_sram_4096x512_2r1w/: mobol_sram_4096x512_2r1w.bb.v  mobol_sram_4096x512_2r1w.lef  mobol_sram_4096x512_2r1w.v
synth/pdk/: stdcell.lef  tech.lef
synth/scripts/: count_cells.py  sram_audit.py
synth/verif/: sram_equiv_top.sv  tb_sram_equiv.cpp
synth/yosys/: synth.ys.in
tests/: CMakeLists.txt  smoke_ramulator.cpp  test_address.cpp  test_cycle_dual_gemm.cpp  test_cycle_llm.cpp  test_cycle_micro.cpp  test_functional.cpp  test_timing.cpp
tools/edgc/: REPORT_COMPILER.md  REPORT_INT_PRECISION.md  REPORT_MXU_PROFILE.md  REPORT_P1_BARRIER_ELIM.md  REPORT_P2_DOUBLE_BUFFER.md  REPORT_P3_MXU_SIZE.md  REPORT_P4A_HEAD_PARALLEL.md  REPORT_TIER1_DECODE.md  bench_attention.py  bench_gemm.py  dbg.py  decode_tier1.py  edgc_cc.py  models.py  mxu_dse.py  profile_mxu.py  run_edgc.sh  spec_decode.py
tools/edgc/edgc/: __init__.py  arch.py  compile.py  golden.py  isa.py  model.py  numerics.py
tools/edgc/results/: int_precision.csv  p1_barrier_elim.csv  p2_edge_models.csv  p2_gemm_sweep.csv  p3_mxu_size_dse.csv  p4a_head_parallel.csv  tier1_decode_b1_c512.csv  tier1_llama1b_tier2.csv
